context approach seems promising

--- a/src/styles/Termynal.css
+++ b/src/styles/Termynal.css
@@ -5,7 +5,7 @@
 }
 
 .termynalContainer {
-    width: 750px;
+    width: 100%;
     max-width: 100%;
     background: var(--color-bg);
     color: var(--color-text);
